// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberField /> with error should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default input-field-base"
    htmlFor="test-number-field-old-id"
  >
    <span
      className="default body-sm weight-medium carbon-900"
    >
      test number field label
    </span>
  </label>
  <input
    className="fillable size-md error"
    id="test-number-field-old-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="tel"
    value=""
  />
  <span
    className="default body-sm weight-regular error-600 line-height-body-sm"
  >
    test caption
  </span>
</div>
`;

exports[`<NumberField /> with initial value and caption should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default input-field-base"
    htmlFor="test-number-field-old-id"
  >
    <span
      className="default body-sm weight-medium carbon-900"
    >
      test number field label
    </span>
  </label>
  <input
    className="fillable size-md filled"
    id="test-number-field-old-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="tel"
    value={123}
  />
  <span
    className="default body-sm weight-regular carbon-900 line-height-body-sm"
  >
    test caption
  </span>
</div>
`;

exports[`<NumberField /> without initial value or caption should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default input-field-base"
    htmlFor="test-number-field-old-id"
  >
    <span
      className="default body-sm weight-medium carbon-900"
    >
      test number field label
    </span>
  </label>
  <input
    className="fillable size-md"
    id="test-number-field-old-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="tel"
    value=""
  />
</div>
`;
